# pkgcenter

./: CMB_CODE_ANALYSIS.md  LICENSE  Makefile  README.md
.git-filters/: keywords
.git-hooks/: README  commit-msg  install.sh  post-commit  pre-commit
Mk/: clean_directories  clean_symlinks  die  git_import  git_tag  make_directories  make_stage  make_symlinks  pkgcenter_readconf  xargs
depend/: import  tag
depend/bsdconfig/: Makefile  Makefile.depend  USAGE  bsdconfig  bsdconfig.8
depend/bsdconfig/console/: INDEX  Makefile  Makefile.depend  USAGE  console  font  keymap  repeat  saver  screenmap  ttys
depend/bsdconfig/console/include/: Makefile  Makefile.depend  messages.subr
depend/bsdconfig/diskmgmt/: Makefile  Makefile.depend  USAGE  diskmgmt
depend/bsdconfig/diskmgmt/include/: Makefile  Makefile.depend
depend/bsdconfig/docsinstall/: Makefile  Makefile.depend  USAGE  docsinstall
depend/bsdconfig/dot/: Makefile  Makefile.depend  dot
depend/bsdconfig/examples/: Makefile  Makefile.depend  add_some_packages.sh  browse_packages_http.sh  bsdconfigrc
depend/bsdconfig/include/: Makefile  Makefile.depend  messages.subr
depend/bsdconfig/includes/: INDEX  Makefile  Makefile.depend  USAGE  includes.sh
depend/bsdconfig/mouse/: Makefile  Makefile.depend  USAGE  disable  enable  flags  mouse  port  type
depend/bsdconfig/networking/: INDEX  Makefile  Makefile.depend  USAGE  defaultrouter  devices  hostname  nameservers  networking  wlanconfig
depend/bsdconfig/password/: Makefile  Makefile.depend  USAGE  password
depend/bsdconfig/security/: Makefile  Makefile.depend  USAGE  kern_securelevel  security
depend/bsdconfig/share/: Makefile  Makefile.depend  common.subr  device.subr  dialog.subr  geom.subr  keymap.subr  mk  mustberoot.subr  script.subr  strings.subr  struct.subr  sysrc.subr  variable.subr
depend/bsdconfig/startup/: Makefile  Makefile.depend  USAGE  misc  rcadd  rcconf  rcdelete  rcedit  rcvar  startup
depend/bsdconfig/timezone/: Makefile  Makefile.depend  USAGE  timezone
depend/bsdconfig/ttys/: Makefile  Makefile.depend  USAGE  ttys
depend/bsdconfig/usermgmt/: Makefile  Makefile.depend  USAGE  groupadd  groupdel  groupedit  useradd  userdel  useredit  usermgmt
depend/bsdinstall/: Makefile  Makefile.depend  bsdinstall  bsdinstall.8
depend/bsdinstall/distextract/: Makefile  Makefile.depend  distextract.c
depend/bsdinstall/distfetch/: Makefile  Makefile.depend
depend/bsdinstall/partedit/: Makefile  Makefile.depend  diskeditor.c  diskeditor.h  gpart_ops.c  part_wizard.c  partedit.c  partedit.h  partedit_arm64.c  partedit_generic.c  partedit_powerpc.c  partedit_sparc64.c  partedit_x86.c  sade.8  scripted.c
depend/bsdinstall/scripts/: Makefile  Makefile.depend  adduser  auto  bootconfig  checksum  config  docsinstall  entropy  hardening  hostname  jail  keymap  mirrorselect  mount  netconfig  netconfig_ipv4  netconfig_ipv6  rootpass  script  services  time  umount  wlanconfig  zfsboot
depend/cmb/: GNUmakefile  GNUmakefile.in  LICENSE  Makefile  README  cmb.1  cmb.1.html  cmb.c  config.h.in  configure  configure.in
depend/cmb/bench/: cmb_bench_cpu.sh  cmb_bench_cpu_flops.sh  cmp.sh  run.sh  stats.sh
depend/cmb/release/: Makefile  README
depend/cputools/: GNUmakefile.in  Makefile  config.h.in  configure  configure.in  cputools.h  ept.c  htt.c  vtx  vtx.c  x86_64.c
depend/dpv/: GNUmakefile  Makefile  Makefile.depend  dpv.1  dpv.c  dpv_util.h
depend/dwatch/: Makefile  dwatch  dwatch.1
depend/dwatch/examples/: Makefile  profile_template
depend/dwatch/libexec/: Makefile  chmod  errno  fchmod  fchmodat  io  ip  kill  nanosleep  open  proc  proc-signal  rw  sched  tcp  tcp-io  udp  vop_create  vop_readdir  vop_rename  vop_symlink
depend/libcmb/: GNUmakefile  GNUmakefile.in  LICENSE  Makefile  README  cmb.3  cmb.3.html  cmb.c  cmb.h  cmb_private.h  config.h.in  configure  configure.in
depend/libcmb/other/: README  combn_test.sh  itertools_test.sh  numpy_test.sh
depend/libcmb/perl/: Cmb.xs  Makefile  test.pl  test2.pl  test3.pl  test4.pl
depend/libcmb/perl/Cmb/: Changes  MANIFEST  Makefile.PL  README  ppport.h
depend/libcmb/perl/Cmb/fallback/: const-c.inc  const-xs.inc
depend/libcmb/perl/Cmb/lib/: Cmb.pm
depend/libcmb/perl/Cmb/t/: Cmb.t
depend/libcmb/perl/tests/: test1.pl  test2.pl  test3.pl  test5.pl
depend/libcmb/python/: Makefile  test.py  test2.py  test3.py  test4.py  test4_itertools.sh  test4_numpy.sh
depend/libcmb/python.c/: Makefile  Makefile.in  configure  configure.in
depend/libcmb/python.c/cmb/: Makefile  Makefile.in  README  __init__.py  cmb.c
depend/libcmb/python.c/tests/: test1.py  test2.py  test3.py  test4.py  test5.py
depend/libcmb/python.ctypes/: Makefile
depend/libcmb/python.ctypes/cmb/: __init__.py  cmb.py
depend/libcmb/python.ctypes/tests/: test4.py
depend/libcmb/python/cmb/: __init__.py  cmb.py
depend/libcmb/python/tests/: test1.py  test2.py  test3.py  test4.py  test5.py
depend/libcmb/release/: Makefile  README
depend/libcmb/tests/: Makefile  test1.c  test2.c  test3.c  test4.c  test5.c
depend/libdpv/: GNUmakefile  Makefile  Makefile.depend  dialog_util.c  dialog_util.h  dialogrc.c  dialogrc.h  dprompt.c  dprompt.h  dpv.3  dpv.c  dpv.h  dpv_private.h  status.c  status.h  util.c  util.h
depend/libfigpar/: GNUmakefile  Makefile  Makefile.depend  figpar.3  figpar.c  figpar.h  string_m.c  string_m.h
depend/libfigput/: LICENSE  Makefile  figput.3  figput.c  figput.h
depend/sysconf/: Makefile  sysconf.8  sysconf.c
freebsd/: Makefile  create.sh  unpack.sh
freebsd/Mk/: convert  manifest.subr  pkgcc  pkgname  pkgorigin  pkgtag  pkgtagname
freebsd/RELENG_11_0/: Makefile
freebsd/RELENG_12_0/: Makefile
freebsd/skel/: MANIFEST  Makefile  Makefile.ng  Makefile.old  PLIST  pkgcenter.conf
redhat/: Makefile  create.sh  unpack.sh
redhat/Mk/: rpmconf  rpmgroup  rpmname  rpmsrcfiles  rpmstagefiles  rpmtag  rpmtagname  template.conf  template.spec
redhat/rhel6-x86_64/: Makefile
redhat/rhel7-x86_64/: Makefile
redhat/skel/: Makefile  pkgcenter.conf
(+126 files in other folders)
